Bug #2186 - Accessibility : 2011 Theme links and H2 fail contrast checker

--- a/wp-content/mu-plugins/theme-fixes/twentyeleven.css
+++ b/wp-content/mu-plugins/theme-fixes/twentyeleven.css
@@ -1,3 +1,50 @@
+a {
+	color: #12619c;
+}
+#access a.assistive-text:focus,
+.screen-reader-text:hover,
+.screen-reader-text:active,
+.screen-reader-text:focus {
+	color: #12619c;
+}
+#site-title a:hover,
+#site-title a:focus,
+#site-title a:active {
+	color: #12619c;
+}
+.entry-title a:hover,
+.entry-title a:focus,
+.entry-title a:active {
+	color: #12619c;
+}
+.entry-header .comments-link a:hover,
+.entry-header .comments-link a:focus,
+.entry-header .comments-link a:active {
+	background-color: #12619c;
+}
+article.feature-image.small .entry-summary p a:hover {
+	background: #12619c;
+}
+.feature-slider a.active {
+	background: #12619c;
+}
+section.recent-posts .other-recent-posts .comments-link a:hover {
+	color: #12619c;
+	border-color: #12619c;
+}
+.widget_search #searchsubmit:active {
+	background: #12619c;
+}
+#respond input#submit:active {
+	background: #12619c;
+}
+#site-description {
+	color: #000
+}
+#access li:hover > a,
+#access a:focus {
+	color: #000;
+}
 input.s {
     background: url(../css/images/search.png) no-repeat 5px 6px;
     -moz-border-radius: 2px;
@@ -86,7 +133,7 @@ input.searchsubmit {
 	top: -2px;
 }
 .widget_search .searchsubmit:active {
-	background: #1982d1;
+	background: #12619c;
 	border-color: #0861a5;
 	-webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.1);
